# byteswapdb

./: .gitignore  Cargo.toml  README.md  SQL.md  test_cases.txt
cli/: Cargo.toml
cli/src/: args.rs  main.rs
common/src/: errors.rs  types.rs
engine/: Cargo.toml
engine/src/: errors.rs  lib.rs  reader.rs
engine/src/sqlite/: catalog.rs  database.rs  file_format.rs  header.rs  mod.rs  page.rs  schema_format.rs  text_encoding.rs
sql/: Cargo.toml
sql-parser/: Cargo.toml
sql-parser/src/: lexer.rs  lib.rs  parser.rs  token.rs
sql-parser/src/ast/: entities.rs  expression.rs  mod.rs
sql-parser/src/parser/: mod.rs  select.rs
sql/src/: lexer.rs  token.rs
sql/src/ast/: entities.rs  expression.rs  mod.rs
sql/src/parser/: mod.rs  select.rs
src/: args.rs  errors.rs  lib.rs  main.rs
src/sql/parser/: lexer.rs
