[package]
name = "byteswapdb"
version = "0.1.0"
edition = "2021"
authors = ["Almaz Murzabekov <almaz@murzabekov.net>"]

[workspace]
members = [
    "common",
    "sql",
]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
sql = { version = "0.1.0", path = "sql" }
